--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Demon's Starway</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>  
-    <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/web v0.4.json", {onProgress: UnityProgress});
+		var versionMovil = false;
+		if(navigator.userAgent.match(/iPad/i)){
+			//alert("ipad");
+			versionMovil = true;
+		}
+		if(navigator.userAgent.match(/iPhone/i)){
+			//alert("iphone");
+			versionMovil = true;
+		}
+		if(navigator.userAgent.match(/Android/i)){
+			//alert("android");
+			versionMovil = true;
+		}
+		if(navigator.userAgent.match(/BlackBerry/i)){
+			//alert("blackberry");
+			versionMovil = true;
+		}
+		if(navigator.userAgent.match(/webOS/i)){
+			//alert("webos");
+			versionMovil = true;
+		}
+		
+		if (versionMovil){
+			window.location= "build/movil/index.html";
+		}else{
+			window.location= "build/web/index.html";
+		}
     </script>
   </head>
   <body>
-    <div class="webgl-content">
-      <div id="gameContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Demon's Starway</div>
-      </div>
-    </div>
+  
   </body>
 </html>
